chore: Fix homepage image rendering on small screens
Remove `.max-w-sm` class and `_alignment.scss` file
Update homepage two-column layout styles and markup
Hide presentational images from accessibility tree

--- a/assets/stylesheets/pages/_index.scss
+++ b/assets/stylesheets/pages/_index.scss
@@ -66,10 +66,14 @@
 .index {
   p {
     @include type-scale(1, 6, 2, 0);
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   h2 {
-    @include type-scale(4, 6, 3);
+    @include type-scale(4, 6, 3, 0);
   }
 
   h3 {
@@ -77,27 +81,52 @@
   }
 }
 
-.contribute-row {
-  display: flex;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+.two-column {
   align-items: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  gap: $gl-spacing-7;
+  justify-content: space-between;
+
+  @include media-sm-up {
+    flex-direction: row;
+    gap: $gl-spacing-8;
+  }
 }
 
-.contribute-copy {
-  min-width: 320px;
-  flex: 0 0 60%;
-  max-width: 60%;
+.two-column--alt {
+  @include media-sm-up {
+    .two-column-end {
+      order: 1;
+    }
+    .two-column-start {
+      order: 2;
+    }
+  }
 }
 
-.contribute-img {
-  flex: 0 0 40%;
-  max-width: 40%;
+.two-column-start {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+  flex-shrink: 0;
+  max-width: 320px;
+  width: 100%;
 
-  img {
+  .two-column-image {
+    height: auto;
+    margin: auto;
     width: 100%;
   }
+
+  .two-column-image--small {
+    max-width:180px
+  }
+}
+
+.two-column-end {
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .components-list {
